# stripe

./: Cargo.toml  README.md  stripe_discord.yaml
src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  overwrite.rs
src/api/: client.rs  errors.rs  events.rs  format.rs  mod.rs  success.rs
src/data/: mod.rs  types.rs
src/db/: format.rs  mod.rs  sled.rs  supabase.rs
src/db/operations/: customer_id.rs  mod.rs
src/discord/: client.rs  mod.rs  request_builder.rs
src/email/: builder.rs  client.rs  mod.rs  resend.rs  smtp.rs
src/email/templates/: mod.rs  template.rs
src/email/utils/: format.rs  mod.rs
src/events/: charge.rs  checkout.rs  mod.rs  payment_intent.rs  router.rs
src/log/: mod.rs
src/organization/: mod.rs  model.rs  router.rs
src/tests/: base.rs  mod.rs
src/utils/: check.rs  format.rs  mod.rs
