[package]
name = "stripe_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.198"
serde_derive = "1.0.198"
serde_json = "1.0.116"
serde_yaml = "0.9.3"
sled = "0.34.7"
supabase_rs = "0.2.3"
tokio = { version =  "1.37.0", features = ["full", "macros", "rt-multi-thread"] }

